Test the Bootstrap_3_1_1_Base theme and modify it slightly.

--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Styles/Less/Site/_TheThemeMachine-Bootstrap-Scaffolding.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Styles/Less/Site/_TheThemeMachine-Bootstrap-Scaffolding.less
@@ -16,9 +16,18 @@
 
 /*rows*/
 #layout-wrapper,
-[id$="-container"],
-#footer {
+[id$="-container"]
+{
     > .group {
+        .make-row();
+    }
+}
+
+#layout-footer.group > #footer
+{    
+    .make-md-column(12); // because the #layout-footer is a row
+    .group
+    {
         .make-row();
     }
 }
