--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Views/ThemeSelect.cshtml
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Views/ThemeSelect.cshtml
@@ -1,1 +1,17 @@
-﻿
+﻿@{
+    var themes = (IEnumerable<SelectListItem>)Model.Themes;
+}
+<div id="theme-select">
+    @using (Html.BeginFormAntiForgeryPost(Url.Action("Preview", new { Controller = "Admin", Area = "Orchard.Themes" }), FormMethod.Post, new { @class = "inline" }))
+    {
+        <fieldset>
+            <span>@T("Current theme: ")</span>
+            @Html.DropDownList("ThemeName", themes, new { onChange = "this.form.submit();" })
+            @Html.Hidden("ReturnUrl", Context.Request.RawUrl)
+            @Html.Hidden("ThemeId", themes.FirstOrDefault(x => x.Selected).Value)
+            <button type="submit" title="@T("Apply")" name="submit.Apply" value="@T("Apply")">
+                @T("Apply this theme")
+            </button>
+        </fieldset>
+    }
+</div>
