--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Views/ThemeSelect.cshtml
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Views/ThemeSelect.cshtml
@@ -2,14 +2,18 @@
     var themes = (IEnumerable<SelectListItem>)Model.Themes;
 }
 <div id="theme-select">
-    @using (Html.BeginFormAntiForgeryPost(Url.Action("Preview", new { Controller = "Admin", Area = "Orchard.Themes" }), FormMethod.Post, new { @class = "inline" }))
+    @using (Html.BeginFormAntiForgeryPost(
+        Url.Action("Activate", new { Controller = "Home", Area = "BigFont.TheThemeMachineDesigner" }),
+        FormMethod.Post))
     {
         <fieldset>
             <span>@T("Current theme: ")</span>
-            @Html.DropDownList("ThemeName", themes, new { onChange = "this.form.submit();" })
+            @Html.DropDownList("ThemeId", themes)
             @Html.Hidden("ReturnUrl", Context.Request.RawUrl)
-            @Html.Hidden("ThemeId", themes.FirstOrDefault(x => x.Selected).Value)
-            <button type="submit" title="@T("Apply")" name="submit.Apply" value="@T("Apply")">
+            <button type="submit"
+                    title="@T("Apply")"
+                    name="submit.Apply"
+                    value="@T("Apply")">
                 @T("Apply this theme")
             </button>
         </fieldset>
