--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/less/_ThemeSelect.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/less/_ThemeSelect.less
@@ -1,10 +1,13 @@
 ﻿#theme-select {
     position: absolute;
-    top: 0;
+    top: 100px;
     left: 0;
+    border: 2px dashed red;
+    padding: 5px;
 
     span, input, button {
         display: block;
+        margin: 5px;
     }
 
     button, select {
