--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Views/ThemeSelect.cshtml
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Views/ThemeSelect.cshtml
@@ -18,4 +18,5 @@
             </button>
         </fieldset>
     }
+    <p>Warning: This currently breaks if everyone visiting the site does it at once.</p>
 </div>
