--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/less/_ThemeSelect.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/less/_ThemeSelect.less
@@ -1,9 +1,12 @@
 ﻿#theme-select {
     position: absolute;
-    top: 100px;
-    left: 0;
+    top: 0;
+    right: 0;
     border: 2px dashed red;
     padding: 5px;
+    z-index: 999999;
+    background: black;
+    width: 200px;
 
     span, input, button {
         display: block;
