--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/module.css
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/module.css
@@ -1668,10 +1668,13 @@ div#layout-wrapper footer .zone .content-item {
 }
 #theme-select {
   position: absolute;
-  top: 100px;
-  left: 0;
+  top: 0;
+  right: 0;
   border: 2px dashed red;
   padding: 5px;
+  z-index: 999999;
+  background: black;
+  width: 200px;
 }
 #theme-select span,
 #theme-select input,
