Enable front end tracing (not activating) of a theme.

--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/module.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/module.less
@@ -1,2 +1,2 @@
-﻿@import 'less/_TheThemeMachine-Designer.less'; 
-@import 'less/_ThemeSelect.less';
+﻿@import 'less/_TraceTheme.less'; 
+@import 'less/_TraceThemeControls.less';
