--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Views/TraceThemeControls.cshtml
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Views/TraceThemeControls.cshtml
@@ -2,17 +2,17 @@
     var themes = (IEnumerable<SelectListItem>)Model.Themes;
     var currentTheme = Model.CurrentTheme;
 }
-<div id="theme-select">
+<div id="theme-designer-control-bar">
     @using (Html.BeginFormAntiForgeryPost(
         Url.Action("Trace", new { Controller = "Home", Area = "BigFont.TheThemeMachineDesigner" }),
         FormMethod.Post))
     {
         <fieldset>
-            <span>@T("Currently Tracing: ")</span>
-            @Html.DropDownList("ThemeId", themes)
+            <label for="themes">@T("Currently Tracing: ")</label>
+            @Html.DropDownList("ThemeId", themes, new { id ="themes"})
             @Html.Hidden("ReturnUrl", Context.Request.RawUrl)
             <button type="submit">
-                @T("Trace this theme")
+                @T("Trace this theme.")
             </button>
         </fieldset>
     }
