--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/less/_TraceThemeControls.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/less/_TraceThemeControls.less
@@ -1,28 +1,29 @@
 ﻿
-@control-bar-height: 30px;
-@control-bar-background:#F0F0F0;
-@control-bar-font-color:black;
+@control-bar-height: 26px;
+@control-bar-background: #F0F0F0;
+@control-bar-font-color: black;
 
-html
-{
-    margin-top:@control-bar-height;
+html {
+    margin-top: @control-bar-height;
 }
 
 #theme-designer-control-bar {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+    background: @control-bar-background;
     width: 100%;
     top: 0;
     position: fixed;
+    padding: 1px 0;
     left: 0;
     height: @control-bar-height;
     color: @control-bar-font-color;
+    box-sizing: border-box;
     border-bottom: 1px solid darken(@control-bar-background, 50);
-    background: @control-bar-background;
-    padding:1px 0;
 
     label, input, button {
-        margin: 0 5px;
+        display: inline;
+        margin: 0  0  0 5px;
+        vertical-align:middle;        
     }
 }
