Add crazy high z-index.

--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/less/_TraceTheme.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/less/_TraceTheme.less
@@ -84,9 +84,10 @@ body.trace-class-and-id {
             &[class] {
                 &:before {
                     content: "#"attr(id)"."attr(class);
-                    display: block;
                     line-height: @annotation-font-size;
                     font-size: @annotation-font-size;
+                    background:black;
+                    color:yellow;
                 }
             }
         }
