--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/module.css
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/module.css
@@ -118,9 +118,10 @@ body.trace-class-and-id div#layout-wrapper header[class]:before,
 body.trace-class-and-id div#layout-wrapper aside[class]:before,
 body.trace-class-and-id div#layout-wrapper footer[class]:before {
   content: "#" attr(id) "." attr(class);
-  display: block;
   line-height: 12px;
   font-size: 12px;
+  background: black;
+  color: yellow;
 }
 body.trace-zones-and-widgets .zone {
   margin-bottom: 4px;
@@ -142,7 +143,7 @@ body.trace-zones-and-widgets .content-item {
   background-image: -o-linear-gradient(left, #00ffff, #ffffff);
 }
 html {
-  margin-top: 26px;
+  margin-top: 40px;
 }
 #theme-designer-control-bar {
   -moz-box-sizing: border-box;
@@ -153,15 +154,18 @@ html {
   position: fixed;
   padding: 1px 0;
   left: 0;
-  height: 26px;
+  height: 40px;
   color: #000000;
   box-sizing: border-box;
   border-bottom: 1px solid #717171;
+  z-index: 99999;
 }
 #theme-designer-control-bar label,
 #theme-designer-control-bar input,
-#theme-designer-control-bar button {
+#theme-designer-control-bar button,
+#theme-designer-control-bar select {
   display: inline;
   margin: 0  0  0 5px;
   vertical-align: middle;
+  width: auto;
 }
