Get the navbar collapse working.

--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Styles/Site.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Styles/Site.less
@@ -1,1 +1,3 @@
-﻿@import 'Less/Site/_TheThemeMachine-Bootstrap-Scaffolding.less';
+﻿@import 'Less/Bootstrap/bootstrap.less';
+@import 'Less/Site/_TheThemeMachine-Bootstrap-Scaffolding.less';
+@import 'Less/Site/_TheThemeMachine-Bootstrap-Navigation.less';
