--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Views/Parts.MenuWidget-MenuWidget.cshtml
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Views/Parts.MenuWidget-MenuWidget.cshtml
@@ -1,29 +1,5 @@
 ﻿@{
-    
-    var collapseId = Model.Id;
-    
-    Model.Menu.Classes.Add("nav");
-    Model.Menu.Classes.Add("navbar-nav");
-    
-
-    var menu = Model.Menu;
-
-    // Model is Model.Menu from the layout (Layout.Menu)
-    var tag = Tag(menu, "ul");
-
-    var items = (IList<dynamic>)Enumerable.Cast<dynamic>(menu.Items);
-
-    if (items.Any())
-    {
-        items[0].Classes.Add("first");
-        items[items.Count - 1].Classes.Add("last");
-    }
+    Model.Menu.Id = Model.Id;
 }
-<div class="container-fluid">
-    <nav id="@collapseId" class="collapse navbar-collapse">
-        @tag.StartElement
-        @* see MenuItem shape template *@
-        @DisplayChildren(menu)
-        @tag.EndElement
-    </nav>
-</div>
+
+@Display(Model.Menu)
