--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Views/TraceThemeControls.cshtml
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Views/TraceThemeControls.cshtml
@@ -13,17 +13,18 @@
         <label for="trace-topography">
             <input type="checkbox" id="trace-topography" />
             Topograhy
-
         </label>
         <label for="trace-class-and-id">
             <input type="checkbox" id="trace-class-and-id" />
-            Classes and Ids
-
+            Structural Classes and Ids
         </label>
-        <label for="trace-zones-and-widgets">
-            <input type="checkbox" id="trace-zones-and-widgets" />
-            Zones & Widgets
-
+        <label for="trace-zones">
+            <input type="checkbox" id="trace-zones" />
+            Zones
+        </label>
+        <label for="trace-widgets">
+            <input type="checkbox" id="trace-widgets" />
+            Widgets
         </label>
     }
 </div>
