--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/module.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/module.less
@@ -1,2 +1,3 @@
-﻿@import 'less/_TraceTheme.less'; 
+﻿@import 'less/_mixins.less';
+@import 'less/_TraceTheme.less'; 
 @import 'less/_TraceThemeControls.less';
