--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/less/_TraceThemeControls.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/less/_TraceThemeControls.less
@@ -19,6 +19,7 @@ html {
     color: @control-bar-font-color;
     height: @control-bar-height;
     left: 0;
+    overflow:hidden;
     padding: 1px 0;
     position: fixed;
     top: 0;
